# fly_analysis

./: README.md  analysis.py  generate_data.py  pyproject.toml  simple_algorithm.py  to_settle.py
data/: generate_data.py  generated_daily_settle.csv  generated_daily_values.csv  to_settle_daily_values.csv  to_settle_daily_values_pnl_calculated.xlsx
