[tool.poetry]
name = "fly-analysis"
version = "0.1.0"
description = "Fly Analysis"
authors = ["xavsant <xavierboons2021@economics.smu.edu.sg>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "2.0.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"